[package]
name = "rscan"
version = "0.1.0"
edition = "2021"
authors = ["jakobgrine"]
description = "Program for scanning multi-page PDF documents using SANE"
repository = "https://github.com/jakobgrine/rscan"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
image = "0.24.6"
indicatif = "0.17.3"
printpdf = "0.5.3"
requestty = "0.5.0"
sane-scan = "0.1.2"
